--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -572,6 +572,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   background-color: #a3c6f0;
+  margin-top: 2rem;
 }
 
 .showcase__title {
@@ -587,6 +588,7 @@ body {
 @media (max-width: 768px) {
   .showcase {
     padding: 5%;
+    margin-top: 3rem;
   }
   .showcase__title {
     font-size: 6rem;
