Used Bootstrap grid on home screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -494,8 +494,6 @@ body {
   flex: 1;
   display: flex;
   justify-content: center;
-  margin: 0;
-  padding: 0;
 }
 
 .header__btn__item {
@@ -610,23 +608,30 @@ body {
   }
 }
 .services__section {
-  padding: 5rem 10rem;
+  padding: 3rem 10rem;
 }
 
 .service {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
+  padding: 2rem 0;
+  margin: 0;
 }
 
 .service__title {
   margin: 0;
+  text-align: center;
 }
 
 .service__paragraph,
 .service__list {
   margin: 0;
-  padding-left: 3rem;
+}
+
+.service__paragraph {
+  text-align: justify;
+}
+
+.service__list {
+  text-align: center;
 }
 
 .testimonials__title {
@@ -644,6 +649,8 @@ body {
   margin: 0;
   padding: 0;
   font-style: italic;
+  font-weight: bold;
+  text-align: end;
 }
 
 .testim_paragraph {
@@ -658,8 +665,6 @@ body {
     padding-bottom: 1rem;
   }
   .service {
-    display: flex;
-    flex-direction: column;
     margin-bottom: 5rem;
   }
   .service__title {
@@ -681,12 +686,9 @@ body {
   }
   .testimonial {
     margin-bottom: 3rem;
-    display: flex;
-    flex-direction: column-reverse;
   }
   .testim_pacient {
     font-size: 1.2rem;
-    text-align: end;
   }
   .testim_paragraph {
     font-size: 1.2rem;
