--- a/assets/css/pages/_about.scss
+++ b/assets/css/pages/_about.scss
@@ -6,22 +6,19 @@
 }
 
 .doctor {
-  display: flex;
+  // display: flex;
   margin-bottom: 3rem;
   background-color: abstracts.$color-primary-100;
   padding: 2rem 4rem;
   border-radius: 20px;
 }
-.doctor__info {
-  flex: 2;
-}
+
 .doctor__job {
   font-style: italic;
 }
 .doctor__img {
-  flex: 1;
-  margin-right: 5rem;
   border-radius: 50%;
+  margin: auto 0;
 }
 
 @include breakpoint('medium') {
@@ -50,7 +47,7 @@
   }
   .doctor__img {
     margin: 1.5rem 0 0 0;
-    width: 40%;
+    // width: 40%;
   }
   .doctor__profile {
     margin: 1.5rem 0 1rem 0;
